<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E0DEDE">


    <SearchView
        android:id="@+id/searchBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="-5dp"
        android:layout_marginRight="-5dp"
        android:background="@drawable/searchbargradient"
        android:clickable="true"
        android:elevation="15dp"
        android:focusedByDefault="true"
        android:orientation="horizontal"
        android:transitionName="BeginTransition" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/SearchDirectionsOptions"
        android:layout_below="@+id/searchBar"
        android:layout_marginBottom="10dp"
        android:scrollbars="vertical" />

    <LinearLayout
        android:id="@+id/SearchDirectionsOptions"
        android:layout_width="397dp"
        android:layout_height="160dp"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="7dp"
        android:background="@drawable/roundedcorners"
        android:orientation="vertical">

        <TextView
            android:id="@+id/current_search_text"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:paddingTop="6dp"
            android:text=""
            android:textAlignment="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0DEDE" />


        <Button
            android:id="@+id/show_location_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:paddingBottom="0dp"
            android:text="Show Location"
            android:textAllCaps="false" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0DEDE" />

        <Button
            android:id="@+id/get_directions_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#FFFFFF"
            android:text="Get Directions"
            android:textAllCaps="false"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#E0DEDE" />


    </LinearLayout>

</RelativeLayout>